<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.shawky.myshoestore.model.Shoe"/>
        <import type="com.shawky.myshoestore.IntConverter"/>

        <variable
            name="addShoe"
            type="com.shawky.myshoestore.viewModel.SharedViewModel" />
    </data>

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
<!--
    Linear Layout to hold the items of the shoe details fragment
    -->
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:clipToPadding="false"
           android:gravity="top"
           android:orientation="vertical">


           <ImageView
               android:id="@+id/addShoeImage"
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:contentDescription="@string/welcomeImage"
               android:maxHeight="200dp"
               android:minHeight="100dp"
               android:paddingTop="@dimen/side_margin"
               android:src="@drawable/shoe" />

           <TextView
               android:id="@+id/shoe_name_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/side_margin"
               android:layout_marginEnd="@dimen/side_margin"
               android:text="@string/shoe_name"
               android:textColor="@color/black"
               android:textSize="@dimen/text_size" />

           <EditText
               android:id="@+id/shoe_name_text_field"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/side_margin"
               android:layout_marginEnd="@dimen/side_margin"
               android:layout_marginBottom="@dimen/side_margin"
               android:ems="10"
               android:hint="@string/shoe_hint"
               android:text="@={addShoe.shoe.name}"
               android:importantForAutofill="no"
               android:inputType="textPersonName"
               android:textColorHighlight="@color/blue"
               android:textColorHint="#78909C"
               android:textSize="@dimen/text_size"
               tools:ignore="LabelFor,TextFields" />

           <TextView
               android:id="@+id/company_name_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/side_margin"
               android:layout_marginEnd="@dimen/side_margin"
               android:text="@string/company_name"
               android:textColor="@color/black"
               android:textSize="@dimen/text_size" />

           <EditText
               android:id="@+id/company_field"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/side_margin"
               android:layout_marginEnd="@dimen/side_margin"
               android:layout_marginBottom="@dimen/side_margin"
               android:ems="10"
               android:hint="@string/company_hint"
               android:text="@={addShoe.shoe.company}"
               android:importantForAutofill="no"
               android:inputType="textPersonName"
               android:textColorHighlight="@color/blue"
               android:textColorHint="#78909C"
               android:textSize="@dimen/text_size"
               tools:ignore="LabelFor,TextFields" />

           <TextView
               android:id="@+id/shoe_size_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/side_margin"
               android:layout_marginEnd="@dimen/side_margin"
               android:text="@string/shoe_size"
               android:textColor="@color/black"
               android:textSize="@dimen/text_size" />

           <EditText
               android:id="@+id/shoe_size_field"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/side_margin"
               android:layout_marginEnd="@dimen/side_margin"
               android:layout_marginBottom="@dimen/side_margin"
               android:ems="10"
               android:inputType="number"
               android:hint="@string/shoe_size_hint"
               android:text="@={addShoe.shoe.size}"
               android:importantForAutofill="no"
               android:textColorHighlight="@color/blue"
               android:textColorHint="#78909C"
               android:textSize="@dimen/text_size"
               tools:ignore="LabelFor,TextFields" />

           <TextView
               android:id="@+id/description_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/side_margin"
               android:layout_marginEnd="@dimen/side_margin"
               android:text="@string/description"
               android:textColor="@color/black"
               android:textSize="@dimen/text_size" />

           <EditText
               android:id="@+id/description_field"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/side_margin"
               android:layout_marginEnd="@dimen/side_margin"
               android:layout_marginBottom="@dimen/side_margin"
               android:ems="10"
               android:hint="@string/description_hint"
               android:importantForAutofill="no"
               android:text="@={addShoe.shoe.description}"
               android:inputType="textPersonName"
               android:textColorHighlight="@color/blue"
               android:textColorHint="#78909C"
               android:textSize="@dimen/text_size"
               tools:ignore="LabelFor,TextFields" />

           <Button
               android:id="@+id/save_button"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/button_margin"
               android:layout_marginEnd="@dimen/button_margin"
               android:text="@string/save"
               android:textSize="@dimen/text_size"
               app:backgroundTint="@color/blue" />

           <Button
               android:id="@+id/cancel_button"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/button_margin"
               android:layout_marginEnd="@dimen/button_margin"
               android:text="@android:string/cancel"
               android:textSize="@dimen/text_size"
               app:backgroundTint="@android:color/holo_red_dark" />
       </LinearLayout>
   </ScrollView>

</layout>