<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/instructionsImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/welcomeImage"
                android:maxHeight="400dp"
                android:minHeight="200dp"
                android:src="@drawable/shoe" />

            <TextView
                android:id="@+id/start_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/instructions_title"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/instructions_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/instructions_text"
                android:textAlignment="center"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:text="@string/start_button"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                app:backgroundTint="@color/blue"
                app:cornerRadius="@dimen/radius" />
        </LinearLayout>

    </ScrollView>

</layout>